[project]
name = "illusion"
version = "0.4.6"
description = "The Perfect Illusion of an inventory system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "discord-py>=2.7.1",
    "niimprint",
    "pyserial>=3.5",
    "python-barcode>=0.16.1",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
niimprint = { git = "https://github.com/Peyton-C/niimprint" }
